tests/checker/diagnostics/0371_labels_wrong_x_type_06.ml.infer.expected
File "0371_labels_wrong_x_type_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0371_labels_wrong_x_type_06 is not a valid module name.

File "0371_labels_wrong_x_type_06.ml", line 2, characters 21-25:
2 | let _ = pick_zeta ~x:true ~y:false
                         ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
